--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "一花一世界 一叶一菩提"
+description: "「一花一世界 一叶一菩提」"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
