--- a/about.html
+++ b/about.html
@@ -6,7 +6,10 @@ header-img: "img/about-bg.jpg"
 multilingual: true
 ---
 
-{% include about.md %}
+<div class="about post-container">
+    {% capture about %}{% include about.md %}{% endcapture %}
+    {{about | markdownify}}
+</div>
 
 {% if site.disqus_username %}
 <!-- disqus 评论框 start -->
