--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: "No sweet without sweat"
+description: "「永远相信美好的事情即将发生」"
 header-img: "img/tag-bg.jpg"
 ---
 
