--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ multilingual: true
     {{about | markdownify}}
 </div>
 
-{% if site.disqus_username %}
+<!-- {% if site.disqus_username %}
 <!-- disqus 评论框 start -->
 <div class="comment">
     <div id="disqus_thread" class="disqus-thread">
@@ -34,4 +34,4 @@ multilingual: true
     })();
 </script>
 <!-- disqus 公共JS代码 end -->
-{% endif %}
+{% endif %} -->
