--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "「Make great things happen.」"
+description: "「Make great things happen」"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
